# saas-carte-grise

./: .dockerignore  .env.example  .gitignore  BETA_GUIDE.md  CHANGELOG.md  Dockerfile  GUIDE_INSTALLATION.md  INSTALL.md  MIGRATION_AUDIT.md  Procfile  README.md  demo_server.py  docker-compose.yml  gen-lang-client-0123501972-a55d0eeea7d2.json  install.bat  install.sh  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 2210fe3b07be_baseline_tous_modeles.py
api/: __init__.py  auth.py  dependencies.py  main.py
api/guards/: naf_filter.py  volume_limit.py
api/middleware/: auth.py  rate_limit.py
api/models/: __init__.py  audit.py  base.py  client.py  document.py  dossier.py  professionnel.py
api/routers/: batch.py  client.py  clients.py  decisions.py  documents.py  dossiers.py  emails.py  license.py  professionnel.py  public.py  rules.py  scan.py  webhooks.py
api/schemas/: document.py  dossier.py
config/: __init__.py  expediteurs_autorises.txt  field_mappings.py  logging.py  scoring.yaml  settings.py  tax_rates.py
dashboard/: __init__.py  app.py
dashboard/components/: __init__.py  document_viewer.py  dossier_card.py
dashboard/pages/: 01_dossiers.py  02_review_queue.py  03_analytics.py  04_settings.py
data/: cerfa_fields_map.json
data/test_docs/: 01_CNI_DUPONT.txt  02_PERMIS_DUPONT.txt  03_COC_RENAULT_CLIO.txt  04_FACTURE_GARAGE.txt  06_DOMICILE_EDF.txt
data/test_docs_vo/: 01_CNI_DURAND.txt  02_PERMIS_DURAND.txt  03_DOMICILE_DURAND.txt  04_CG_BARREE.txt  05_COC_BMW_X3.txt
docs/: 01_vision_globale.md  02_outils_production.md  03_architecture_technique.md  04_phases_developpement.md  05_guide_operateur.md  06_acces_distant.md  OPTIMIZATION_PHASE_8.md  WHITEPAPER.md  WHITEPAPER_tmp.html  audit-complet.md  audit-complet_tmp.html  parcours_systeme.md  parcours_systeme_tmp.html  plan-wordpress.md  synthese_service_carte_grise.md  synthese_service_carte_grise_tmp.html  whitepaper-autodocpro-complet.md  whitepaper-imatra-complet.md  whitepaper_carte_grise_pro.html  whitepaper_carte_grise_pro.md
docs/architecture/: 01_architecture_globale.md  02_modele_donnees.md
docs/product/: 01_parcours_client.md  (+4 more)
engine/: __init__.py  dossier_matcher.py  email_parser.py  ocr_patterns.py  orchestration.py
extension/: README.md  content.js  manifest.json  popup.html  popup.js
frontend/: .env.production  package-lock.json  package.json  vite.config.ts
integrations/: __init__.py  ban_addresses.py  insee_sirene.py  nhtsa_vin.py  siv_ants.py
notifications/: __init__.py  email.py  messages.py  relance_emails.py  sms.py
scripts/: check_tax_rates.py  generate_demo_cerfa.py  generate_fake_facture.py  generate_license.py  generate_license_keypair.py  import_historique.py  import_motos.py  import_types_mines.py  init_db.py  install.sh  run_cerfa.py  run_extract.py  run_notify.py  run_validate.py  seed_wmi_database.py  setup_db.py  setup_openclaw.sh  sign_rules_bundle.py  test_cerfa_vn.py  test_cerfa_vo.py  test_ocr_provider.py  test_pipeline.py  update.sh
site/: 404.html  agent.html  carte-grise.html  cgv.html  comment-ca-marche.html  confidentialite.html  demo-agent.html  demo-vendeur.html  demo.html  index-old.html  index.html  mentions-legales.html  robots.txt  securite.html  sitemap.xml  tarifs.html  telecharger.html  validation-import.html  vendeur.html
storage/: __init__.py  document_store.py
tests/: E2E_SCENARIO.md  conftest.py  test_cerfa_filler.py  test_classifier.py  test_cross_checker.py  test_extraction.py  test_ocr.py  test_taxes.py  test_vehicle_search.py  test_vin_decoder.py
workers/: __init__.py  notifications.py  pipeline.py
(+198 files in other folders)
