[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "carte-grise-saas"
version = "0.1.0"
description = "Moteur d'automatisation des demandes de carte grise"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Base de données
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Validation & sérialisation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # OCR & traitement image
    "pillow>=10.3.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",

    # LLM
    "anthropic>=0.28.0",

    # Intégrations
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",

    # Workers
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # Dashboard
    "streamlit>=1.35.0",

    # Storage
    "aiofiles>=23.2.0",
    "boto3>=1.34.0",

    # PDF (Cerfa generation)
    "pdfrw>=0.4",

    # Utilitaires
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.9.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.25.0",
    "unicodedata2>=15.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=engine --cov=api --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "N", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "api*", "dashboard*", "workers*", "storage*", "notifications*", "config*", "integrations*"]
