[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imatra"
version = "2.0.0"
description = "Logiciel local de préparation de dossiers carte grise pour agents habilités SIV"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Base de données SQLite locale
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",

    # Validation & sérialisation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # OCR local
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
    "pillow>=10.3.0",
    "pdf2image>=1.17.0",

    # Parsing emails (drag & drop)
    "extract-msg>=0.48.0",

    # Génération Cerfa
    "fpdf2>=2.7.0",
    "pypdf>=3.17.0",

    # Validation et fuzzy matching
    "python-dateutil>=2.9.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.25.0",
    "unicodedata2>=15.1.0",

    # Stockage local chiffré + signature licences
    "cryptography>=42.0.0",

    # HTTP client (licence + MAJ règles)
    "httpx>=0.27.0",

    # Utilitaires
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "api*", "storage*", "notifications*", "config*", "integrations*"]
